# llm-home-automation-analysis

./: .gitignore  LICENSE  README.md  commands_with_natural_language.json  pyproject.toml  setup.py
docs/: _config.yml  index.md  proposal.md  report.md
docs/media/: README.md
llm_home_automation_analysis/src/: main.py  room.py
llm_home_automation_analysis/src/agent/: gpt_agent.py  simple_gpt_agent.py  structured_agent.py  structured_agent_list.py
llm_home_automation_analysis/src/dataset/: generate_command.py  generate_human_language.py
llm_home_automation_analysis/src/dataset/data/: complex_commands.json  composite_commands.json  house_state.json  simple_commands.json
llm_home_automation_analysis/src/dataset/outputs/: complex_gpt_results.json  simple_gpt_results.json
llm_home_automation_analysis/src/dataset/result/Llama-3.2-1B-Instruct-f16.gguf/: complex_commands.json  composite_commands.json
llm_home_automation_analysis/src/dataset/result/Meta-Llama-3.1-8B-Instruct-f32.gguf/: complex_commands.json  composite_commands.json
llm_home_automation_analysis/src/dataset/result/Qwen2.5-32B-Instruct-Q5_K_S.gguf/: complex_commands.json  composite_commands.json  simple_commands.json
llm_home_automation_analysis/src/prompts/: prompts.py
llm_home_automation_analysis/src/simulation/: device.py  example.py  house.py  main.py  room.py  user_command.py
llm_home_automation_analysis/src/voice/: voice.py
